src/objects/Case_Queue_Assignment__mdt.object
<CustomObject>
    <description>Assigns queue by given country code.</description>
    <fields>
        <fullName>Billing_Cases__c</fullName>
        <label>Billing Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Cases__c</fullName>
        <label>New Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Cases__c</fullName>
        <label>On-Hold Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Cases__c</fullName>
        <label>Tech Cases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Queue Assignment</label>
    <pluralLabel>Case Queue Assignments</pluralLabel>
</CustomObject>